--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 		<link href="./_app/immutable/assets/_layout-121f180c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-4255f6f5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-a98e0221.js">
+		<link rel="modulepreload" href="./_app/immutable/start-adb58c30.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-df1b6393.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9e424c52.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30d0f3fb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-625d1a5d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-022e5555.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-69b2614d.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-45978a6c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-01f37948.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-d73a1027.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -124,7 +124,7 @@
 												</button></div>
 											<div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button></div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-505 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-404 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -420,14 +420,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1w7dlei">
-			import { start } from "./_app/immutable/start-a98e0221.js";
+		<script type="module" data-sveltekit-hydrate="1tkxml6">
+			import { start } from "./_app/immutable/start-adb58c30.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1w7dlei"]').parentNode,
-				version: "1679936426479",
+				target: document.querySelector('[data-sveltekit-hydrate="1tkxml6"]').parentNode,
+				version: "1679936671164",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
