--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,7 +25,8 @@
 				Paradox,
 				DLC, 
 				Tera Raid Battle,
-				7 Star Pikachu Raid Water,
+				Ditto,
+				Samurott, Tauros,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
 				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
@@ -60,7 +61,7 @@
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-121f180c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-3b5748ba.js">
+		<link rel="modulepreload" href="./_app/immutable/start-abd84a8a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-df1b6393.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9e424c52.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30d0f3fb.js">
@@ -224,13 +225,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1ofy586">
-			import { start } from "./_app/immutable/start-3b5748ba.js";
+			import { start } from "./_app/immutable/start-abd84a8a.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1ofy586"]').parentNode,
-				version: "1680244817580",
+				version: "1680768201112",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
