--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,6 +13,8 @@
 			name="keywords"
 			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
 				Tera Type Calculator,
+				Best Tera Raid Builds,
+				Build,
 				Walking Wake,
 				Iron Leaves,
 				Walking Wake Raid,
@@ -54,22 +56,24 @@
 		<meta name="revisit-after" content="1 days" />
 		<meta name="author" content="Blitzlord" />
 		<base href="/" />
-		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://securepubads.g.doubleclick.net/" crossorigin>
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-121f180c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-58dbc201.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-df1b6393.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9e424c52.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30d0f3fb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-625d1a5d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-3c063959.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-d73a1027.js">
+		<link href="./_app/immutable/assets/_layout-c6dfcd8f.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-de208840.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-de548609.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-da236e82.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/tera.raid-390cb35e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/tera.scores-094278cd.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-2f2846bf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c0960786.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-b1ee16ba.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-8152b69a.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-rfo6gi_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-rfo6gi_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -95,7 +99,7 @@
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
+					<li class="nav-item"><a class="nav-link undefined" href="/type-symbols.html">Type Symbols</a></li>
 					<li class="nav-item">
 						<button class="type type__button" data-type="Dark" style="margin-right: 10px;"><span>Dark Mode</span></button></li>
 					<li class="nav-item">
@@ -224,16 +228,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1ofy586">
-			import { start } from "./_app/immutable/start-58dbc201.js";
+		<script type="module" data-sveltekit-hydrate="gbue6u">
+			import { start } from "./_app/immutable/start-de208840.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1ofy586"]').parentNode,
-				version: "1681637619512",
+				target: document.querySelector('[data-sveltekit-hydrate="gbue6u"]').parentNode,
+				version: "1681670864888",
 				hydrate: {
-					node_ids: [0, 3],
+					node_ids: [0, 6],
 					data: [null,null],
 					form: null
 				}
