--- a/stage/privacy-policy.html
+++ b/stage/privacy-policy.html
@@ -50,11 +50,11 @@
 
 
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-2b334758.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-7d9b2acd.js">
+		<link href="./_app/immutable/assets/_layout-6964b58b.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-3a8d2a49.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-755eee42.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-8e6f148e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-d336c68f.js">
@@ -69,6 +69,10 @@
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
+		<!-- Desktop Sticky -->
+		<div id="nn_lb2"></div>
+		<!-- Mobile Sticky -->
+		<div id="nn_mobile_lb1"></div>
 		<div style="display: contents">
 
 
@@ -85,10 +89,6 @@
 					<li class="nav-item">
 						<button class="type type__button" data-type="Electric"><span>Light Mode</span></button></li></ul></div></div></nav></header>
 	<main>
-		<div id="nn_lb2"></div>
-		
-		<div id="nn_mobile_lb1"></div>
-		
 <div id="privacy-policy" class="divider"></div>
 <div class="container py-3 "><h3>Privacy policy</h3>
 		<h4>1.	Introduction</h4>
@@ -211,14 +211,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1efynsr">
-			import { start } from "./_app/immutable/start-7d9b2acd.js";
+		<script type="module" data-sveltekit-hydrate="1qnj807">
+			import { start } from "./_app/immutable/start-3a8d2a49.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1efynsr"]').parentNode,
-				version: "1675373379875",
+				target: document.querySelector('[data-sveltekit-hydrate="1qnj807"]').parentNode,
+				version: "1675683294079",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
