--- a/stage/type-table.html
+++ b/stage/type-table.html
@@ -50,13 +50,13 @@
 
 
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-2b334758.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-7d9b2acd.js">
+		<link href="./_app/immutable/assets/_layout-6964b58b.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-3a8d2a49.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-755eee42.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-08a503b9.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-babdfe03.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-d336c68f.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
@@ -70,6 +70,10 @@
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
+		<!-- Desktop Sticky -->
+		<div id="nn_lb2"></div>
+		<!-- Mobile Sticky -->
+		<div id="nn_mobile_lb1"></div>
 		<div style="display: contents">
 
 
@@ -86,14 +90,12 @@
 					<li class="nav-item">
 						<button class="type type__button" data-type="Electric"><span>Light Mode</span></button></li></ul></div></div></nav></header>
 	<main>
-		<div id="nn_lb2"></div>
-		
-		<div id="nn_mobile_lb1"></div>
-		
 <div id="type-table" class="divider"></div>
 
 <div class="container py-3 type-table"><div class="row"><div class="col-12"><h2 class="jumbotron-heading">Type Table</h2>
 				<p class="lead s-nPv-U4yeUmII">Learn and know the new symbols.</p>
+				<div class="lb-wrapper"><div id="nn_lb1"></div>
+					<div id="nn_mobile_lb2"></div></div>
 				<table class="table table-bordered table-sm type-table"><tbody><tr><th><small class="d-block d-sm-none">Old</small>
 								<span class="d-none d-sm-block d-lg-block ">Old Symbol</span></th>
 							<th><small class="d-block d-sm-none">New</small>
@@ -185,14 +187,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1n34ijl">
-			import { start } from "./_app/immutable/start-7d9b2acd.js";
+		<script type="module" data-sveltekit-hydrate="bbfi4k">
+			import { start } from "./_app/immutable/start-3a8d2a49.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1n34ijl"]').parentNode,
-				version: "1675373379875",
+				target: document.querySelector('[data-sveltekit-hydrate="bbfi4k"]').parentNode,
+				version: "1675683294079",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
