--- a/howto-video.html
+++ b/howto-video.html
@@ -52,7 +52,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/howto-video.html/_page.svelte-9bc2fbb4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/howto-video.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -96,7 +96,7 @@
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="pbeyxe"]').parentNode,
-				version: "1675603490515",
+				version: "1675688510117",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
@@ -106,7 +106,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
-		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -114,6 +114,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script> -->
+		</script>
 	</body>
 </html>
