--- a/type-table.html
+++ b/type-table.html
@@ -53,7 +53,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Tera Type Table</title><!-- HEAD_svelte-9fl3ui_START --><link rel="canonical" href="https://terastal.net/type-table.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Tera Type Table</title><!-- HEAD_svelte-9fl3ui_START --><link rel="canonical" href="https://terastal.net/type-table.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -179,7 +179,7 @@
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="j3fhbt"]').parentNode,
-				version: "1675603490515",
+				version: "1675688510117",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
@@ -189,7 +189,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
-		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -197,6 +197,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script> -->
+		</script>
 	</body>
 </html>
